[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deepagents>=0.5.3",
    "dotenv>=0.9.9",
    "fastmcp>=3.2.4",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "markdownify>=1.2.2",
    "python-pptx>=1.0.2",
]
